--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>page details</h1>
-    <ul class="people"></ul>
+    <h1 id="page-title">The DOM</h1>
+
+    <div>
+        <p>hello world</p>
+        <p>lorem ipsum</p>
+        <p class="error">This is an error message</p>
+    </div>
+
+    <div class="error">This is another error message</div>
+
     <script src="sandbox.js"></script>
 </body>
 </html>
